--- a/src/pages/work/[id].astro
+++ b/src/pages/work/[id].astro
@@ -21,7 +21,11 @@ const workDescriptionFirstParagraph =
   work.description.split("\n\n").at(0)?.replaceAll("\n", "") ?? "";
 ---
 
-<Layout title={work.title} description={workDescriptionFirstParagraph}>
+<Layout
+  title={work.title}
+  description={workDescriptionFirstParagraph}
+  ogImage={work.banner}
+>
   <div class="container mx-auto px-2">
     <WorkScreen work={work} />
   </div>
